Added possibility to upload thumbnails
