# api/internal/http/dto/image.go
@@ -1,14 +1,19 @@
 package dto
 
 type ImagePayload struct {
-	Name         string  `json:"name"`
-	Tag          string  `json:"tag"`
-	Title        *string `json:"title"`
-	Description  *string `json:"description"`
-	ThumbnailURL *string `json:"thumbnailUrl"`
-	IsPublic     bool    `json:"isPublic"`
+	Name        string  `json:"name"`
+	Tag         string  `json:"tag"`
+	Title       *string `json:"title"`
+	Description *string `json:"description"`
+	IsPublic    bool    `json:"isPublic"`
 }
 
 type CreateImageRequest struct {
 	ImagePayload
+}
+
+type UpdateImageRequest struct {
+	Title       *string `json:"title"`
+	Description *string `json:"description"`
+	IsPublic    bool    `json:"isPublic"`
 }
